# ChangeLog for perl-core/Time-HiRes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-HiRes/ChangeLog,v 1.68 2011/06/09 18:16:25 tove Exp $

*Time-HiRes-1.972.300 (09 Jun 2011)

  09 Jun 2011; Torsten Veller <tove@gentoo.org> +Time-HiRes-1.972.300.ebuild:
  Version bump

*Time-HiRes-1.972.200 (19 May 2011)

  19 May 2011; Torsten Veller <tove@gentoo.org> +Time-HiRes-1.972.200.ebuild:
  Version bump

  17 Jan 2011; Torsten Veller <tove@gentoo.org> -Time-HiRes-1.97.20.ebuild:
  Cleanup

*Time-HiRes-1.97.21 (18 Mar 2010)

  18 Mar 2010; Torsten Veller <tove@gentoo.org> +Time-HiRes-1.97.21.ebuild:
  Version bump

*Time-HiRes-1.97.20 (14 Feb 2010)

  14 Feb 2010; Torsten Veller <tove@gentoo.org> +Time-HiRes-1.97.20.ebuild:
  Version bump

  17 Jan 2010; Torsten Veller <tove@gentoo.org> -Time-HiRes-1.97.07.ebuild,
  -Time-HiRes-1.97.15.ebuild:
  Cleanup

  05 Jan 2010; nixnut <nixnut@gentoo.org> Time-HiRes-1.97.19.ebuild:
  ppc stable #288026

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  Time-HiRes-1.97.19.ebuild:
  Marked ~x86-solaris, bug #296509

  16 Dec 2009; Jonathan Callen <abcd@gentoo.org> Time-HiRes-1.97.07.ebuild,
  Time-HiRes-1.97.15.ebuild, Time-HiRes-1.97.19.ebuild:
  QA: Transfer prefix keywords

  14 Dec 2009; Raúl Porcel <armin76@gentoo.org> Time-HiRes-1.97.19.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #288026

  10 Dec 2009; Brent Baude <ranger@gentoo.org> Time-HiRes-1.97.19.ebuild:
  Marking Time-HiRes-1.97.19 ppc64 stable for bug 288026

  07 Dec 2009; Markus Meier <maekke@gentoo.org> Time-HiRes-1.97.19.ebuild:
  arm stable, bug #288026

  07 Dec 2009; Jeroen Roovers <jer@gentoo.org> Time-HiRes-1.97.19.ebuild:
  Stable for HPPA (bug #288026).

  04 Dec 2009; Torsten Veller <tove@gentoo.org> Time-HiRes-1.97.19.ebuild:
  Stable on amd64 (#288026)

  04 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  Time-HiRes-1.97.19.ebuild:
  x86 stable, bug 288026
