@@ -1,0 +1,17 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-HiRes/Attic/Time-HiRes-1.972.400.ebuild,v 1.1 2011/06/10 11:47:26 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=ZEFRAM
+MODULE_VERSION=1.9724
+inherit perl-module
+
+DESCRIPTION="Perl Time::HiRes. High resolution alarm, sleep, gettimeofday, interval timers"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE=""
+
+SRC_TEST="do"
