@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Time-HiRes
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-HiRes/ChangeLog,v 1.68 2011/06/09 18:16:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-HiRes/ChangeLog,v 1.69 2011/06/10 11:47:26 tove Exp $
+
+*Time-HiRes-1.972.400 (10 Jun 2011)
+
+  10 Jun 2011; Torsten Veller <tove@gentoo.org> +Time-HiRes-1.972.400.ebuild:
+  Version bump
 
 *Time-HiRes-1.972.300 (09 Jun 2011)
 
